# Rust-TS-RS-GO

./: Cargo.toml  conf.json
src/: config.rs  main.rs  opts.rs  projector.rs
