[package]
name = "rust_ts_rs_go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.9", features = ["derive"] }
collection_macros = "0.2.0"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
